--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+      content="Little Lemon Restaurant"
     />
-    <meta name="og:title" content="Little Lemon - Mediterranean Restaurant" />
+    <meta name="og:title" content="Little Lemon Restaurant" />
     <meta property="og:type" content="website" />
     <meta
       name="og:description"
-      content="Family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+      content="Little Lemon Restaurant Website created by Lexicon"
     />
     <meta name="og:url" content="https://www.littlelemon.com" />
     <meta name="og:image" content="%PUBLIC_URL%/little-lemon-192.png" />
@@ -21,7 +21,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Little Lemon - Mediterranean Restaurant</title>
+    <title>Little Lemon Restaurant</title>
     <!-- <script
       defer
       crossorigin=""
