--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website" />
     <meta
       name="og:description"
-      content="Little Lemon Restaurant Website created by Lexicon"
+      content="Little Lemon Restaurant Web-App created by Lexicon"
     />
     <meta name="og:url" content="https://www.littlelemon.com" />
     <meta name="og:image" content="%PUBLIC_URL%/little-lemon-192.png" />
